--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -129,3 +129,22 @@ body {
   border-color: var(--primary-color-1);
   background-color: var(--white-100);
 }
+
+/* scrollbar css */
+
+.scollbar-ctm::-webkit-scrollbar {
+  background-color: var(--secondary-color-1);
+  width: 8px;
+  height: 8px;
+}
+
+.scollbar-ctm::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--primary-color-2);
+}
+.scollbar-ctm::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: var(--secondary-color-1);
+}
