--- a/src/assets/styles/products.css
+++ b/src/assets/styles/products.css
@@ -30,7 +30,8 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 24px;
-  height: calc(100vh - 124px);
+  height: 100%;
+  max-height: calc(100vh - 124px);
   overflow: auto;
 }
 
@@ -38,48 +39,6 @@
 
 .product-card-container .product-card {
   width: 300px;
-}
-.product-card .img {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 16px;
-}
-.product-card .img img {
-  height: 132px;
-  margin: auto;
-  border-radius: 12px;
-}
-.product-card .name {
-  font-size: 18px;
-  font-weight: bold;
-  line-height: 14px;
-  margin-bottom: 4px;
-}
-.product-card .make {
-  font-size: 16px;
-  line-height: 14px;
-}
-.product-card .price {
-  color: var(--primary-color-2);
-  font-weight: bold;
-  font-size: 22px;
-}
-
-.scollbar-ctm::-webkit-scrollbar {
-  background-color: var(--secondary-color-1);
-  width: 8px;
-  height: 8px;
-}
-
-.scollbar-ctm::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: var(--primary-color-2);
-}
-.scollbar-ctm::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  background-color: var(--secondary-color-1);
 }
 
 /* product list css */
