--- a/src/components/app/product-list-item/product-list-item.css
+++ b/src/components/app/product-list-item/product-list-item.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   min-width: 512px;
+  height: 112px;
 }
 .product-list .left-aside {
   display: flex;
